--- a/Murad Islamzada Lab [2]/index.html
+++ b/Murad Islamzada Lab [2]/index.html
@@ -9,7 +9,7 @@
 <body>
     <div class="cv-qabi">
         <div class="yan-panel">
-            <img src="Screenshot 2025-04-11 193334.png" alt="Murad Islamzada">
+            <img src="murad.png.png" alt="Murad Islamzada">
             <h2>Murad Islamzada</h2>
             <p><strong>Doğum Tarixi:</strong> 14.04.2007</p>
             <p><strong>Əlaqə:</strong> 050 993 81 06</p>
